--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,52 @@
-a {
-  text-decoration: ;
+header {
+  background-color: #1F98F0;
+
 }
 
-header {
-  margin: 0;
-  background-color: #123;
-  color: white;
+header p {
+  display: inline-block;
+  padding-right: 50px;
+  padding-top: 40px;
+  padding-left: 230px;
+  font-size: 30.95px;
+  font-weight: 700;
+  color: #fff;
+}
+
+
+
+header ul {
+  display: inline-block;
+}
+
+header ul li {
+  display: inline-block;
+  padding-right: 50px;
+  font-family: 'Work Sans', sans-serif;
+}
+
+header ul li:last-child {
+  margin-right: 373px;
+  padding: 0px;
+}
+
+.container {
+  width: 1200px;
+}
+
+header a {
+  text-decoration: none;
+  color: #fff;
+  opacity: 0.6;
+  
+}
+
+a:hover {
+  color: #fff;
+  opacity: 1;
+  background-repeat: no-repeat;
+	background-position: center bottom 1px;
+	background-size: 100% 1px;
+	background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.00) 0%, #FFF 48.13%, rgba(255, 255, 255, 0.00) 96.48%);
+
 }
