--- a/css/header.css
+++ b/css/header.css
@@ -1,13 +1,11 @@
 header {
   background-color: #1F98F0;
-
 }
 
 header p {
   display: inline-block;
   padding-right: 50px;
   padding-top: 40px;
-  padding-left: 230px;
   font-size: 30.95px;
   font-weight: 700;
   color: #fff;
@@ -26,19 +24,20 @@ header ul li {
 }
 
 header ul li:last-child {
-  margin-right: 373px;
+  /* margin-right: 300px; */
   padding: 0px;
 }
 
 .container {
   width: 1200px;
+  border: 2px solid red;
+  margin: 0 auto;
 }
 
 header a {
   text-decoration: none;
   color: #fff;
   opacity: 0.6;
-  
 }
 
 a:hover {
@@ -48,5 +47,20 @@ a:hover {
 	background-position: center bottom 1px;
 	background-size: 100% 1px;
 	background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.00) 0%, #FFF 48.13%, rgba(255, 255, 255, 0.00) 96.48%);
+}
 
+header button {
+  width: 150px;
+  height: 45px;
+  display: inline-block;
+  margin-left: 300px;
+  border-radius: 10px;
+  border: none;
+  background-color: #FFF;
+  cursor: pointer;
+
+}
+
+header button:hover {
+  color: gray;
 }
