--- a/css/company-logo.css
+++ b/css/company-logo.css
@@ -1,7 +1,7 @@
 .container {
     max-width: 1200px;
     margin: 0 auto;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     height: 198;
     box-sizing: border-box;
 }
