--- a/css/feedback.css
+++ b/css/feedback.css
@@ -1,7 +1,8 @@
 .feedback .container {
     margin: 0 auto;
-    width: 1600px;
+    width: 1200px;
     height: 393px;
+    /* border: 2px solid red; */
 }
 .feedback  {
     display: inline-block;
@@ -30,27 +31,27 @@ text-align: center;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 150%;
+    /* line-height: 100px; */
     color: #03101A;
 }
 
 .feedback .GrandBox1{
     display: inline-block;
-    width: 284px;
+    width: 260px;
     text-align: center;
     margin-top: 80px;
 }
 .feedback .GrandBox2{
     display: inline-block;
-    width: 284px;
+    width: 260px;
     text-align: center;
-    margin-left: 370px;
-    margin-right: 312px;
+    margin-left: 200px;
+    margin-right: 200px;
     margin-top: 80px;
 }
 .feedback .GrandBox3{
     display: inline-block;
-    width: 284px;
+    width: 260px;
     text-align: center;
     margin-top: 80px;
 }
