--- a/css/food.css
+++ b/css/food.css
@@ -2,7 +2,7 @@
     background-color: #1F98F0;
 }
 
-.food .container {
+.container {
     /* border: 2px solid red; */
     width: 1200px;
     margin:  0 auto;
